--- a/sobrenos.html
+++ b/sobrenos.html
@@ -14,10 +14,10 @@
             <button id="btnBusca">Buscar</button>
           </div>
         <ul class="header__ul">
-            <li class="header__list"><a class="header__link" href="index.html">Home</a></li>
-            <li class="header__list"><a class="header__link" href="disciplinas.html">Disciplinas</a></li>
-            <li class="header__list"><a class="header__link" href="sobrenos.html">Sobre nós</a></li>
-            <li class="header__list"><a class="header__link" href="suporte.html">Suporte</a></li>
+            <li class="header__list"><a class="header__link" href="">Home</a></li>
+            <li class="header__list"><a class="header__link" href="">Disciplinas</a></li>
+            <li class="header__list"><a class="header__link" href="">Sobre nós</a></li>
+            <li class="header__list"><a class="header__link" href="">Suporte</a></li>
         </ul>
     </header>
     <main>
