--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         </ul>
     </header>
     <main>
-
+        <section class="apresentacao">
+            <h1 class="apresentacao__titulo">Site de Programação</h1>
+            <h2 class="apresentacao__subtitulo">Proposta</h2>
+            <p class="apresentacao__desenvolvimento">Somos do Colégio Estadual do Paraná</p>
+        </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
