--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <title>2º site</title>
 </head>
+
 <body>
     <header>
         <p>EQUIPE 05</p>
         <div id="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..."/>
+            <input type="text" id="txtBusca" placeholder="Buscar..." />
             <button id="btnBusca">Buscar</button>
-          </div>
+        </div>
         <ul class="header__ul">
             <li class="header__list"><a class="header__link" href="index.html">Home</a></li>
             <li class="header__list"><a class="header__link" href="disciplinas.html">Disciplinas</a></li>
@@ -24,11 +26,14 @@
         <section class="apresentacao">
             <h1 class="apresentacao__titulo">Site de Programação</h1>
             <h2 class="apresentacao__subtitulo">Proposta</h2>
-            <p class="apresentacao__desenvolvimento">Somos do Colégio Estadual do Paraná</p>
+            <p class="apresentacao__desenvolvimento">Somos alunos do Colégio Estadual do Paraná e fomos orientados a
+                desenvolver um site na discplina de programação onde contivesse um apanhado geral das pesquisas e
+                empreendimentos dos componentes curriculares do Novo Ensino Médio.</p>
         </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
     </footer>
 </body>
+
 </html>
