--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 desenvolver um site na discplina de programação onde contivesse um apanhado geral das pesquisas e
                 empreendimentos dos componentes curriculares do Novo Ensino Médio.</p>
         </section>
+        <section class="contato">
+            <h3 class="contato__titulo">
+                Contate-nos através deste e-mail:
+            </h3>
+            <p class="contate__email">registros_equipe05@gmail.com</p>
+        </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
