--- a/disciplinas.html
+++ b/disciplinas.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <title>2º site</title>
 </head>
+
 <body>
     <header>
         <p>EQUIPE 05</p>
         <div id="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..."/>
+            <input type="text" id="txtBusca" placeholder="Buscar..." />
             <button id="btnBusca">Buscar</button>
-          </div>
+        </div>
         <ul class="header__ul">
-            <li class="header__list"><a class="header__link" href="">Home</a></li>
-            <li class="header__list"><a class="header__link" href="">Disciplinas</a></li>
-            <li class="header__list"><a class="header__link" href="">Sobre nós</a></li>
-            <li class="header__list"><a class="header__link" href="">Suporte</a></li>
+            <li class="header__list"><a class="header__link" href="index.html">Home</a></li>
+            <li class="header__list"><a class="header__link" href="disciplinas.html">Disciplinas</a></li>
+            <li class="header__list"><a class="header__link" href="sobrenos.html">Sobre nós</a></li>
+            <li class="header__list"><a class="header__link" href="suporte.html">Suporte</a></li>
         </ul>
     </header>
     <main>
@@ -27,4 +29,5 @@
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
     </footer>
 </body>
+
 </html>
