--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <p>EQUIPE 05</p>
+        <h1>EQUIPE 05</h1>
         <div id="divBusca">
             <input type="text" id="txtBusca" placeholder="Buscar..." />
             <button id="btnBusca">Buscar</button>
