--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 <body>
     <header>
-        <h1 class="header__titulo">EQUIPE/05</h1>
-        <div id="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..." />
-            <button id="btnBusca">Buscar</button>
+        <div class="header__titulo_busca">
+            <h1 class="header__titulo">EQUIPE/05</h1>
+            <div id="header__busca">
+                <input id="header__barra" type="text" placeholder="Buscar..." />
+                <button id="header__pesquisa">Buscar</button>
+            </div>
         </div>
         <ul class="header__ul">
             <li class="header__list"><a class="header__link" href="index.html">Home</a></li>
