--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <header>
-        <div class="header__titulo_busca">
+        <div>
             <h1 class="header__titulo">EQUIPE/05</h1>
             <div id="header__busca">
                 <input id="header__barra" type="text" placeholder="Buscar..." />
-                <button id="header__pesquisa">Buscar</button>
+                <a href="#" id="header__barra">Buscar...</a>
             </div>
         </div>
         <ul class="header__ul">
