--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div id="header__busca">
                 <input id="header__barra" type="text" placeholder="Buscar..." />
                 <a href="#" id="header__barra">Buscar...</a>
+                <i class="fas fas-search"></i>
             </div>
         </div>
         <ul class="header__ul">
