--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <header>
-        <div>
+        <div class="header__grup">
             <h1 class="header__titulo">EQUIPE/05</h1>
             <div id="header__busca">
                 <input id="header__barra" type="text" placeholder="Buscar..." />
-                <a href="#" id="header__barra">Buscar...</a>
+                <a href="#" id="header__barra"></a>
                 <i class="fas fas-search"></i>
             </div>
         </div>
