--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <h1 class="header__titulo">EQUIPE/05</h1>
             <div id="header__busca">
                 <input id="header__barra" type="text" placeholder="Buscar..." />
-                <a href="#" id="header__barra"></a>
-                <i class="fas fas-search"></i>
+                <a href="#" id="header__barra">
+                    <img src="" alt="">
+                </a>
             </div>
         </div>
         <ul class="header__ul">
