--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="header__busca">
                 <input id="header__barra" type="text" placeholder="Buscar..." />
                 <a href="#" id="header__barra">
-                    <img src="/imagens/loupe.png" alt="pesquisar">
+                    <img id="header__img" src="/imagens/loupe.png" alt="pesquisar">
                 </a>
             </div>
         </div>
