--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <title>2º site</title>
 </head>
+<!-- txt input, search div -->
 
 <body>
     <header>
