--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <img id="header__img" src="/imagens/loupe.png" alt="pesquisar">
             </a>
         </div>
-        <ul class="header__ul">
-            <li class="header__list"><a class="header__link" href="index.html">Home</a></li>
-            <li class="header__list"><a class="header__link" href="disciplinas.html">Disciplinas</a></li>
-            <li class="header__list"><a class="header__link" href="sobrenos.html">Sobre nós</a></li>
-            <li class="header__list"><a class="header__link" href="suporte.html">Suporte</a></li>
-        </ul>
+        <nav class="header__ul">
+            <a class="header__link" href="index.html">Home</a>
+            <a class="header__link" href="disciplinas.html">Disciplinas</a>
+            <a class="header__link" href="sobrenos.html">Sobre nós</a>
+            <a class="header__link" href="suporte.html">Suporte</a>
+        </nav>
     </header>
     <main>
         <section class="apresentacao">
