--- a/suporte.html
+++ b/suporte.html
@@ -10,20 +10,21 @@
 
 <body>
     <header>
-        <p>EQUIPE 05</p>
-        <div id="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..." />
-            <button id="btnBusca">Buscar</button>
+        <h1 class="header__titulo">EQUIPE/05</h1>
+        <div id="header__busca">
+            <input id="header__barra" type="text" placeholder="Buscar..." />
+            <a href="#" id="header__barra">
+                <img id="header__img" src="/imagens/loupe.png" alt="pesquisar">
+            </a>
         </div>
-        <ul class="header__ul">
-            <li class="header__list"><a class="header__link" href="index.html">Home</a></li>
-            <li class="header__list"><a class="header__link" href="disciplinas.html">Disciplinas</a></li>
-            <li class="header__list"><a class="header__link" href="sobrenos.html">Sobre nós</a></li>
-            <li class="header__list"><a class="header__link" href="suporte.html">Suporte</a></li>
-        </ul>
+        <nav class="header__ul">
+            <a class="header__link" href="index.html">Home</a>
+            <a class="header__link" href="disciplinas.html">Disciplinas</a>
+            <a class="header__link" href="sobrenos.html">Sobre nós</a>
+            <a class="header__link" href="suporte.html">Suporte</a>
+        </nav>
     </header>
     <main>
-
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
