--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -18,10 +18,10 @@
             </a>
         </div>
         <nav class="header__ul">
-            <a class="header__link" href="index.html">Home</a>
-            <a class="header__link" href="disciplinas.html">Disciplinas</a>
-            <a class="header__link" href="sobrenos.html">Sobre nós</a>
-            <a class="header__link" href="suporte.html">Suporte</a>
+            <a class="header__link" href="/index.html">Home</a>
+            <a class="header__link" href="/disciplinas.html">Disciplinas</a>
+            <a class="header__link" href="/sobrenos.html">Sobre nós</a>
+            <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
     <main>
