--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="header__link" href="suporte.html">Suporte</a>
         </nav>
     </header>
-    <main class="padrao__main">
+    <main>
         <section class="apresentacao">
             <h1 class="apresentacao__titulo">Site de Programação</h1>
             <h2 class="apresentacao__subtitulo">Proposta</h2>
