--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
+    <link rel="stylesheet" href="/folhas de estilo/responsividade.css">
     <title>2º site</title>
+
 </head>
 
 <body>
