--- a/sobrenos.html
+++ b/sobrenos.html
@@ -25,6 +25,17 @@
         </nav>
     </header>
     <main>
+        <section class="main__nos">
+            <h1 class="apresentacao__titulo">
+                Quem somos nós?
+            </h1>
+            <p class="apresentacao__desenvolvimento">
+                Somos alunos do Colégio Estadual do Paraná, criadores do site e reponsáveis pela manutenção deste.
+                Cursamos, atualmente, o 2° ano do Novo Ensino Médio e temos a finalidade de divulgar e dispor
+                exercícios, conteúdos, projetos e trabalhos escolares, bem como oferecer, até
+                onde podemos, suporte educacional aos estudantes do EM.
+            </p>
+        </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
