--- a/sobrenos.html
+++ b/sobrenos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
+    <link rel="stylesheet" href="/folhas de estilo/sobrenos.css">
     <title>2º site</title>
 </head>
 
@@ -36,31 +37,31 @@
                 onde podemos, suporte educacional aos estudantes do EM.
             </p>
             <div class="main__nos__fotos">
-                <div class="main__fotos"><img src="/imagens/gabryel.jpg" alt="Gabryel" class="main__img" width="90px">
+                <div class="main__fotos"><img src="/imagens/gabryel.jpg" alt="Gabryel" class="main__img">
                     <p class="main__fotos__text">Olá! Meu nome é Gabryel. Sou de Curitiba, PR, e aluno do Colégio
                         Estadual
                         do Paraná. Desejo cursar medicina no exterior ou na Universidade de São Paulo após cuncluir o
                         ensino
                         médio</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/lian.jpg" alt="Lian" class="main__img" width="90px">
+                <div class="main__fotos"><img src="/imagens/lian.jpg" alt="Lian" class="main__img">
                     <p class="main__fotos__text">Olá! Meu nome é Lian. Sou de Curitiba, PR, e aluno do Colégio Estadual
                         do
                         Paraná. Trabalho com Tecnologia da Informação e desejo cursar Engenharia da Computação após
                         cuncluir
                         o ensino médio</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/lohane.jpg" alt="Lohane" class="main__img" width="90px">
+                <div class="main__fotos"><img src="/imagens/lohane.jpg" alt="Lohane" class="main__img">
                     <p class="main__fotos__text">Olá! Meu nome é Lohane. Sou de Curitiba, PR, e aluno do Colégio
                         Estadual do
                         Paraná.</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/loyola.jpg" alt="Loyola" class="main__img" width="90px">
+                <div class="main__fotos"><img src="/imagens/loyola.jpg" alt="Loyola" class="main__img">
                     <p class="main__fotos__text">Olá! Meu nome é Matheus Loyola. Sou de Curitiba, PR, e aluno do Colégio
                         Estadual do
                         Paraná. Desejo empreender no ramo empresarial.</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa" class="main__img" width="90px">
+                <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa" class="main__img">
                     <p class="main__fotos__text">Olá! Meu nome é Melissa. Sou de Curitiba, PR, e aluno do Colégio
                         Estadual do
                         Paraná.</p>
