--- a/sobrenos.html
+++ b/sobrenos.html
@@ -52,7 +52,7 @@
                         o ensino médio</p>
                 </div>
                 <div class="main__fotos"><img src="/imagens/lohane.jpg" alt="Lohane" class="main__img">
-                    <p class="main__fotos__text">Olá! Meu nome é Lohane. Sou de Curitiba, PR, e aluno do Colégio
+                    <p class="main__fotos__text">Olá! Meu nome é Lohane. Sou de Curitiba, PR, e aluna do Colégio
                         Estadual do
                         Paraná.</p>
                 </div>
@@ -62,7 +62,7 @@
                         Paraná. Desejo empreender no ramo empresarial.</p>
                 </div>
                 <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa" class="main__img">
-                    <p class="main__fotos__text">Olá! Meu nome é Melissa. Sou de Curitiba, PR, e aluno do Colégio
+                    <p class="main__fotos__text">Olá! Meu nome é Melissa. Sou de Curitiba, PR, e aluna do Colégio
                         Estadual do
                         Paraná.</p>
                 </div>
