--- a/sobrenos.html
+++ b/sobrenos.html
@@ -61,7 +61,7 @@
                         Estadual do
                         Paraná. Desejo empreender no ramo empresarial.</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa" class="main__img">
+                <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa" class="main__img main__melissa__matheus">
                     <p class="main__fotos__text">Olá! Meu nome é Melissa. Sou de Curitiba, PR, e aluna do Colégio
                         Estadual do
                         Paraná.</p>
