--- a/sobrenos.html
+++ b/sobrenos.html
@@ -56,7 +56,7 @@
                         Estadual do
                         Paraná.</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/loyola.jpg" alt="Loyola" class="main__img">
+                <div class="main__fotos"><img src="/imagens/loyola.jpg" alt="Loyola" class="main__img main__melissa__matheus">
                     <p class="main__fotos__text">Olá! Meu nome é Matheus Loyola. Sou de Curitiba, PR, e aluno do Colégio
                         Estadual do
                         Paraná. Desejo empreender no ramo empresarial.</p>
