--- a/sobrenos.html
+++ b/sobrenos.html
@@ -56,17 +56,43 @@
                         Estadual do
                         Paraná.</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/loyola.jpg" alt="Loyola" class="main__img main__melissa__matheus">
+                <div class="main__fotos"><img src="/imagens/loyola.jpg" alt="Loyola"
+                        class="main__img main__melissa__matheus">
                     <p class="main__fotos__text">Olá! Meu nome é Matheus Loyola. Sou de Curitiba, PR, e aluno do Colégio
                         Estadual do
                         Paraná. Desejo empreender no ramo empresarial.</p>
                 </div>
-                <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa" class="main__img main__melissa__matheus">
+                <div class="main__fotos"><img src="/imagens/mel.jpg" alt="Melissa"
+                        class="main__img main__melissa__matheus">
                     <p class="main__fotos__text">Olá! Meu nome é Melissa. Sou de Curitiba, PR, e aluna do Colégio
                         Estadual do
                         Paraná.</p>
                 </div>
             </div>
+        </section>
+        <section>
+            <ul class="slider">
+                <li>
+                    <input type="radio" id="slide1" name="slide" checked>
+                    <label for="slide1"></label>
+                    <img class="img_slider" src="/imagens/mel.jpg" />
+                </li>
+                <li>
+                    <input type="radio" id="slide2" name="slide">
+                    <label for="slide2"></label>
+                    <img class="img_slider" src="/imagens/lohane.jpg" />
+                </li>
+                <li>
+                    <input type="radio" id="slide3" name="slide">
+                    <label for="slide3"></label>
+                    <img class="img_slider" src="/imagens/lian.jpg" />
+                </li>
+                <li>
+                    <input type="radio" id="slide4" name="slide">
+                    <label for="slide4"></label>
+                    <img class="img_slider" src="/imagens/gabryel.jpg" />
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
