--- a/sobrenos.html
+++ b/sobrenos.html
@@ -75,22 +75,22 @@
                 <li>
                     <input type="radio" id="slide1" name="slide" checked>
                     <label for="slide1"></label>
-                    <img class="img_slider" src="/imagens/mel.jpg" />
+                    <img class="img_slider" src="/imagens/mel.jpg" class="main__img" />
                 </li>
                 <li>
                     <input type="radio" id="slide2" name="slide">
                     <label for="slide2"></label>
-                    <img class="img_slider" src="/imagens/lohane.jpg" />
+                    <img class="img_slider" src="/imagens/lohane.jpg" class="main__img" />
                 </li>
                 <li>
                     <input type="radio" id="slide3" name="slide">
                     <label for="slide3"></label>
-                    <img class="img_slider" src="/imagens/lian.jpg" />
+                    <img class="img_slider" src="/imagens/lian.jpg" class="main__img" />
                 </li>
                 <li>
                     <input type="radio" id="slide4" name="slide">
                     <label for="slide4"></label>
-                    <img class="img_slider" src="/imagens/gabryel.jpg" />
+                    <img class="img_slider" src="/imagens/gabryel.jpg" class="main__img" />
                 </li>
             </ul>
         </section>
