--- a/sobrenos.html
+++ b/sobrenos.html
@@ -73,22 +73,22 @@
         <section>
             <ul class="slider">
                 <li>
-                    <input type="radio" id="slide1" name="slide" checked>
+                    <input type="radio" id="slide1" class="main__input" name="slide" checked>
                     <label for="slide1"></label>
                     <img src="/imagens/mel.jpg" class="main__img" />
                 </li>
                 <li>
-                    <input type="radio" id="slide2" name="slide">
+                    <input type="radio" id="slide2" class="main__input" name="slide">
                     <label for="slide2"></label>
                     <img src="/imagens/lohane.jpg" class="main__img" />
                 </li>
                 <li>
-                    <input type="radio" id="slide3" name="slide">
+                    <input type="radio" id="slide3" class="main__input" name="slide">
                     <label for="slide3"></label>
                     <img src="/imagens/lian.jpg" class="main__img" />
                 </li>
                 <li>
-                    <input type="radio" id="slide4" name="slide">
+                    <input type="radio" id="slide4" class="main__input" name="slide">
                     <label for="slide4"></label>
                     <img src="/imagens/gabryel.jpg" class="main__img" />
                 </li>
