--- a/sobrenos.html
+++ b/sobrenos.html
@@ -70,6 +70,47 @@
                 </div>
             </div>
         </section>
+        <section class="teste__slider">
+            <div class="content">
+                <input type="radio" name="slide" id="slide1" checked>
+                <input type="radio" name="slide" id="slide2">
+                <input type="radio" name="slide" id="slide3">
+                <input type="radio" name="slide" id="slide4">
+                <input type="radio" name="slide" id="slide5">
+
+                <div class="slide">
+                    <img src="/imagens/gabryel.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/imagens/lian.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/imagens/lohane.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/imagens/loyola.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/imagens/mel.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="navigation">
+                <label for="slide1">Gabryel</label>
+            </div>
+            <div class="navigation">
+                <label for="slide2">Lian</label>
+            </div>
+            <div class="navigation">
+                <label for="slide3">Lohane</label>
+            </div>
+            <div class="navigation">
+                <label for="slide4">Loyola</label>
+            </div>
+            <div class="navigation">
+                <label for="slide5">Melissa</label>
+            </div>
+        </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
