--- a/sobrenos.html
+++ b/sobrenos.html
@@ -79,19 +79,19 @@
                 <input type="radio" name="slide" id="slide5">
 
                 <div class="slide">
-                    <img src="/imagens/gabryel.jpg" alt="">
+                    <img src="/imagens/gabryel.jpg" alt="" width="120px">
                 </div>
                 <div class="slide">
-                    <img src="/imagens/lian.jpg" alt="">
+                    <img src="/imagens/lian.jpg" alt="" width="120px">
                 </div>
                 <div class="slide">
-                    <img src="/imagens/lohane.jpg" alt="">
+                    <img src="/imagens/lohane.jpg" alt="" width="120px">
                 </div>
                 <div class="slide">
-                    <img src="/imagens/loyola.jpg" alt="">
+                    <img src="/imagens/loyola.jpg" alt="" width="120px">
                 </div>
                 <div class="slide">
-                    <img src="/imagens/mel.jpg" alt="">
+                    <img src="/imagens/mel.jpg" alt="" width="120px">
                 </div>
             </div>
 
