--- a/sobrenos.html
+++ b/sobrenos.html
@@ -96,19 +96,19 @@
             </div>
 
             <div class="navigation">
-                <label for="slide1">Gabryel</label>
+                <label for="slide1"></label>
             </div>
             <div class="navigation">
-                <label for="slide2">Lian</label>
+                <label for="slide2"></label>
             </div>
             <div class="navigation">
-                <label for="slide3">Lohane</label>
+                <label for="slide3"></label>
             </div>
             <div class="navigation">
-                <label for="slide4">Loyola</label>
+                <label for="slide4"></label>
             </div>
             <div class="navigation">
-                <label for="slide5">Melissa</label>
+                <label for="slide5"></label>
             </div>
         </section>
     </main>
