--- a/sobrenos.html
+++ b/sobrenos.html
@@ -79,10 +79,10 @@
                 <input type="radio" name="slide" id="slide5">
 
                 <div class="slide">
-                    <img src="/imagens/gabryel.jpg" alt="" width="150px">
+                    <img src="/imagens/lian.jpg" alt="" width="150px">
                 </div>
                 <div class="slide">
-                    <img src="/imagens/lian.jpg" alt="" width="150px">
+                    <img src="/imagens/mel.jpg" alt="" width="150px">
                 </div>
                 <div class="slide">
                     <img src="/imagens/lohane.jpg" alt="" width="150px">
@@ -91,24 +91,23 @@
                     <img src="/imagens/loyola.jpg" alt="" width="150px">
                 </div>
                 <div class="slide">
-                    <img src="/imagens/mel.jpg" alt="" width="150px">
+                    <img src="/imagens/gabryel.jpg" alt="" width="150px">
                 </div>
             </div>
-
             <div class="navigation">
-                <label for="slide1"></label>
+                <label for="slide1" class="bar"></label>
             </div>
             <div class="navigation">
-                <label for="slide2"></label>
+                <label for="slide2" class="bar"></label>
             </div>
             <div class="navigation">
-                <label for="slide3"></label>
+                <label for="slide3" class="bar"></label>
             </div>
             <div class="navigation">
-                <label for="slide4"></label>
+                <label for="slide4" class="bar"></label>
             </div>
             <div class="navigation">
-                <label for="slide5"></label>
+                <label for="slide5" class="bar"></label>
             </div>
         </section>
     </main>
