--- a/sobrenos.html
+++ b/sobrenos.html
@@ -77,7 +77,7 @@
                 <input type="radio" name="slide" id="slide3">
                 <input type="radio" name="slide" id="slide4">
                 <input type="radio" name="slide" id="slide5">
-
+<!-- slide down -->
                 <div class="slide">
                     <img src="/imagens/lian.jpg" alt="" width="150px">
                 </div>
