--- a/sobrenos.html
+++ b/sobrenos.html
@@ -70,14 +70,23 @@
                 </div>
             </div>
         </section>
-        <section class="teste__slider">
+
+    </main>
+    <footer>
+        <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
+    </footer>
+</body>
+
+</html>
+
+
+<!--         <section class="teste__slider">
             <div class="content">
                 <input type="radio" name="slide" id="slide1" checked>
                 <input type="radio" name="slide" id="slide2">
                 <input type="radio" name="slide" id="slide3">
                 <input type="radio" name="slide" id="slide4">
                 <input type="radio" name="slide" id="slide5">
-<!-- slide down -->
                 <div class="slide">
                     <img src="/imagens/lian.jpg" alt="" width="150px">
                 </div>
@@ -109,11 +118,4 @@
             <div class="navigation">
                 <label for="slide5" class="bar"></label>
             </div>
-        </section>
-    </main>
-    <footer>
-        <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
-    </footer>
-</body>
-
-</html>
+        </section> -->
