--- a/sobrenos.html
+++ b/sobrenos.html
@@ -70,7 +70,15 @@
                 </div>
             </div>
         </section>
-
+        <section class="slider">
+            <div class="content">
+                    <img src="/imagens/lian.jpg">
+                    <img src="/imagens/mel.jpg">
+                    <img src="/imagens/lohane.jpg">
+                    <img src="/imagens/loyola.jpg">
+                    <img src="/imagens/gabryel.jpg">
+            </div>
+        </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
