--- a/sobrenos.html
+++ b/sobrenos.html
@@ -72,7 +72,7 @@
             </div>
         </section>
         <div class="container-slider">
-            <button id="prev-button"><img src="./public/images/arrow.png" alt="prev-button"></button>
+            <button id="prev-button"><img src="/imagens/arrow.png" alt="prev-button"></button>
             <div class="container-images">
                 <img src="/imagens/lian.jpg" class="slider on">
                 <img src="/imagens/gabryel.jpg" class="slider">
@@ -80,7 +80,7 @@
                 <img src="/imagens/loyola.jpg" class="slider">
                 <img src="/imagens/mel.jpg" class="slider">
             </div>
-            <button id="next-button"><img src="./public/images/arrow.png" alt="next-button"></button>
+            <button id="next-button"><img src="/imagens/arrow.png" alt="next-button"></button>
         </div>
     </main>
     <footer>
