--- a/sobrenos.html
+++ b/sobrenos.html
@@ -37,6 +37,8 @@
                 exercícios, conteúdos, projetos e trabalhos escolares, bem como oferecer, até
                 onde podemos, suporte educacional aos estudantes do EM.
             </p>
+        </section>
+        <section class="main__nos">
             <div class="main__nos__fotos">
                 <div class="main__fotos">
                     <img src="/imagens/gabryel.jpg" alt="Gabryel" class="main__img">
