--- a/sobrenos.html
+++ b/sobrenos.html
@@ -38,7 +38,7 @@
                 onde podemos, suporte educacional aos estudantes do EM.
             </p>
         </section>
-        <section class="main__nos">
+        <section>
             <div class="main__nos__fotos">
                 <div class="main__fotos">
                     <img src="/imagens/gabryel.jpg" alt="Gabryel" class="main__img">
