--- a/sobrenos.html
+++ b/sobrenos.html
@@ -42,28 +42,23 @@
             <div class="main__nos__fotos">
                 <div class="main__fotos">
                     <img src="/imagens/gabryel.jpg" alt="Gabryel" class="main__img">
-                    <p class="main__fotos__text">Gabryel
-                    </p>
+                    <p class="main__fotos__text">Gabryel</p>
                 </div>
                 <div class="main__fotos">
                     <img src="/imagens/lian.jpg" alt="Lian" class="main__img">
-                    <p class="main__fotos__text">Lian
-                    </p>
+                    <p class="main__fotos__text">Lian</p>
                 </div>
                 <div class="main__fotos">
                     <img src="/imagens/lohane.jpg" alt="Lohane" class="main__img">
-                    <p class="main__fotos__text">Lohane
-                    </p>
+                    <p class="main__fotos__text">Lohane</p>
                 </div>
                 <div class="main__fotos">
-                    <img src="/imagens/loyola.jpg" alt="Loyola" class="main__img main__melissa__matheus">
-                    <p class="main__fotos__text">Matheus Loyola
-                    </p>
+                    <img src="/imagens/loyola.jpg" alt="Loyola">
+                    <p class="main__fotos__text">Matheus Loyola</p>
                 </div>
                 <div class="main__fotos">
-                    <img src="/imagens/mel.jpg" alt="Melissa" class="main__img main__melissa__matheus">
-                    <p class="main__fotos__text">Melissa
-                    </p>
+                    <img src="/imagens/mel.jpg" alt="Melissa">
+                    <p class="main__fotos__text">Melissa</p>
                 </div>
             </div>
         </section>
