--- a/sobrenos.html
+++ b/sobrenos.html
@@ -53,11 +53,11 @@
                     <p class="main__fotos__text">Lohane</p>
                 </div>
                 <div class="main__fotos">
-                    <img src="/imagens/loyola.jpg" alt="Loyola">
+                    <img src="/imagens/loyola.jpg" alt="Loyola" class="main__img">
                     <p class="main__fotos__text">Matheus Loyola</p>
                 </div>
                 <div class="main__fotos">
-                    <img src="/imagens/mel.jpg" alt="Melissa">
+                    <img src="/imagens/mel.jpg" alt="Melissa" class="main__img">
                     <p class="main__fotos__text">Melissa</p>
                 </div>
             </div>
