--- a/suporte.html
+++ b/suporte.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
+    <link rel="stylesheet" href="/folhas de estilo/suporte.css">
     <title>2º site</title>
 </head>
 
@@ -28,13 +29,11 @@
         <section class="sectionformulario">
             <form method="post" action="https://formspree.io/f/xyyaqjnl" class="formulario">
                 <p class="titformulario"> Envie uma mensagem preenchendo o formulário abaixo</p>
-
                 <div class="field">
                     <label for="nome">Seu Nome:</label>
                     <input type="text" id="nome" name="nome" placeholder="Digite seu nome*" required>
                 </div>
-
-                <div class="field">
+                <div lass="field">
                     <label for="email">Seu E-Mail:</label>
                     <input type="email" id="email" name="email" placeholder="Digite seu E-Mail*" required>
                 </div>
@@ -42,8 +41,7 @@
                     <label for="mensagem">Seu Comentário:</label>
                     <textarea name="mensagem" id="mensagem" placeholder="Mensagem*" required></textarea>
                 </div>
-
-                <input type="submit" name="acao" value="Enviar">
+                <input type="submit" name="acao" value="Enviar" id="enviar">
             </form>
         </section>
     </main>
