--- a/suporte.html
+++ b/suporte.html
@@ -27,22 +27,57 @@
     </header>
     <main>
         <section class="sectionformulario">
-            <form method="post" action="https://formspree.io/f/xyyaqjnl" class="formulario">
-                <p class="titformulario"> Envie uma mensagem preenchendo o formulário abaixo</p>
-                <div class="field">
-                    <label for="nome">Seu Nome:</label>
-                    <input type="text" id="nome" name="nome" placeholder="Digite seu nome*" required>
-                </div>
-                <div lass="field">
-                    <label for="email">Seu E-Mail:</label>
-                    <input type="email" id="email" name="email" placeholder="Digite seu E-Mail*" required>
-                </div>
-                <div class="field">
-                    <label for="mensagem">Seu Comentário:</label>
-                    <textarea name="mensagem" id="mensagem" placeholder="Mensagem*" required></textarea>
-                </div>
-                <input type="submit" name="acao" value="Enviar" id="enviar">
-            </form>
+            <div class="box">
+                <form action="">
+                    <fieldset>
+                        <legend><b>Fórmulário de Clientes</b></legend>
+                        <br>
+                        <div class="inputBox">
+                            <input type="text" name="nome" id="nome" class="inputUser" required>
+                            <label for="nome" class="labelInput">Nome completo</label>
+                        </div>
+                        <br><br>
+                        <div class="inputBox">
+                            <input type="text" name="email" id="email" class="inputUser" required>
+                            <label for="email" class="labelInput">Email</label>
+                        </div>
+                        <br><br>
+                        <div class="inputBox">
+                            <input type="tel" name="telefone" id="telefone" class="inputUser" required>
+                            <label for="telefone" class="labelInput">Telefone</label>
+                        </div>
+                        <p>Sexo:</p>
+                        <input type="radio" id="feminino" name="genero" value="feminino" required>
+                        <label for="feminino">Feminino</label>
+                        <br>
+                        <input type="radio" id="masculino" name="genero" value="masculino" required>
+                        <label for="masculino">Masculino</label>
+                        <br>
+                        <input type="radio" id="outro" name="genero" value="outro" required>
+                        <label for="outro">Outro</label>
+                        <br><br>
+                        <label for="data_nascimento"><b>Data de Nascimento:</b></label>
+                        <input type="date" name="data_nascimento" id="data_nascimento" required>
+                        <br><br><br>
+                        <div class="inputBox">
+                            <input type="text" name="cidade" id="cidade" class="inputUser" required>
+                            <label for="cidade" class="labelInput">Cidade</label>
+                        </div>
+                        <br><br>
+                        <div class="inputBox">
+                            <input type="text" name="estado" id="estado" class="inputUser" required>
+                            <label for="estado" class="labelInput">Estado</label>
+                        </div>
+                        <br><br>
+                        <div class="inputBox">
+                            <input type="text" name="endereco" id="endereco" class="inputUser" required>
+                            <label for="endereco" class="labelInput">Endereço</label>
+                        </div>
+                        <br><br>
+                        <input type="submit" name="submit" id="submit">
+                    </fieldset>
+                </form>
+            </div>
         </section>
     </main>
     <footer>
