--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -24,7 +24,7 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
         <section style="text-align: center;">
-            <button style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em;">
+            <button style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em; cursor: pointer;">
                 clique aqui!
             </button>
         </section>
