--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <section style="text-align: center;">
-        <button onclick="alert('oi')"; style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em; cursor: pointer;">
+        <button class="textbottom" onclick="alert('oi')"; style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em; cursor: pointer;">
             clique aqui!
         </button>
     </section>
