--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/java script/main.js">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <title>2º site</title>
 </head>
