--- a/sobrenos.html
+++ b/sobrenos.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="main__fotos">
                     <img src="/imagens/mel.jpg" alt="Melissa" class="main__img">
-                    <p class="main__fotos__text">Melissa</p>
+                    <p class="main__fotos__text">Melyssa</p>
                 </div>
             </div>
         </section>
