--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -25,12 +25,23 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
+    <main>
     <section style="text-align: center;">
         <button class="textbottom" onclick="alert('oi')"; style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em; cursor: pointer;">
             clique aqui!
         </button>
     </section>
-    <main>
+    <section class="teclado">
+        <button class="tecla tecla-pom">pom</button>
+        <button class="tecla tecla-clap">clap</button>
+        <button class="tecla tecla-tim">tim</button>
+        <button class="tecla tecla-puff">puff</button>
+        <button class="tecla tecla-splash">splash</button>
+        <button class="tecla tecla-toim">toim</button>
+        <button class="tecla tecla-psh">psh</button>
+        <button class="tecla tecla-tic">tic</button>
+        <button class="tecla tecla-tom">tom</button>
+    </section>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
