--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/java script/main.js"></script>
     <link rel="stylesheet" href="/folhas de estilo/index.css">
+    <link rel="stylesheet" href="/folhas de estilo/programacao.css">
     <title>2º site</title>
 </head>
 
