--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -27,11 +27,11 @@
         </nav>
     </header>
     <main>
-    <section style="text-align: center;">
+    <!-- <section style="text-align: center;">
         <button class="textbottom" onclick="alert('oi')"; style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em; cursor: pointer;">
             clique aqui!
         </button>
-    </section>
+    </section> -->
     <section class="teclado">
         <button class="tecla tecla-pom">pom</button>
         <button class="tecla tecla-clap">clap</button>
