--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -7,6 +7,7 @@
     <script src="/java script/main.js"></script>
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <link rel="stylesheet" href="/folhas de estilo/programacao.css">
+    <link rel="shortcut" href="">
     <title>2º site</title>
 </head>
 
