--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <link rel="stylesheet" href="/folhas de estilo/programacao.css">
+    <link rel="shortcut icon" href="/imagens/numero-5.png" type="image/x-icon">
     <title>2º site</title>
 </head>
 
