--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -43,15 +43,15 @@
             <button class="tecla tecla-tic">tic</button>
             <button class="tecla tecla-tom">tom</button>
         </section>
-        <audio src="audios/keya" id="som-tecla-pom"></audio>
-        <audio src="audios/keyc" id="som-tecla-clap"></audio>
-        <audio src="audios/keyd" id="som-tecla-tim"></audio>
-        <audio src="audios/keye" id="som-tecla-puff"></audio>
-        <audio src="audios/keyq" id="som-tecla-splash"></audio>
-        <audio src="audios/keys" id="som-tecla-toim"></audio>
-        <audio src="audios/keyw" id="som-tecla-psh"></audio>
-        <audio src="audios/keyx" id="som-tecla-tic"></audio>
-        <audio src="audios/keyz" id="som-tecla-tom"></audio>
+        <audio src="audios/keya.wav" id="som-tecla-pom"></audio>
+        <audio src="audios/keyc.wav" id="som-tecla-clap"></audio>
+        <audio src="audios/keyd.wav" id="som-tecla-tim"></audio>
+        <audio src="audios/keye.wav" id="som-tecla-puff"></audio>
+        <audio src="audios/keyq.wav" id="som-tecla-splash"></audio>
+        <audio src="audios/keys.wav" id="som-tecla-toim"></audio>
+        <audio src="audios/keyw.wav" id="som-tecla-psh"></audio>
+        <audio src="audios/keyx.wav" id="som-tecla-tic"></audio>
+        <audio src="audios/keyz.wav" id="som-tecla-tom"></audio>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
