--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="header__link" href="disciplinas.html">Disciplinas</a>
             <a class="header__link" href="sobrenos.html">Sobre nós</a>
             <a class="header__link" href="suporte.html">Suporte</a>
-            <a class="header__link" href="calculadora.html">Suporte</a>
+            <a class="header__link" href="calculadora.html">Calculadora</a>
         </nav>
     </header>
     <main>
