--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <link href="/folhas de estilo/responsividade.css">
-    <title>2º site</title>
+    <title>projeto agrinho</title>
 
 </head>
 
 <body>
     <header>
-        <h1 class="header__titulo">EQUIPE/05</h1>
+        <h1 class="header__titulo">Projeto Agrinho</h1>
         <div id="header__busca">
             <input id="header__barra" type="text" placeholder="Buscar..." />
             <a href="#" id="header__barra">
