--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <link href="/folhas de estilo/responsividade.css">
-    <title>projeto agrinho</title>
+    <title>projeto agrinho 1</title>
 
 </head>
 
