--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <h1 class="apresentacao__titulo">Site de Programação</h1>
             <h2 class="apresentacao__subtitulo">Proposta</h2>
             <p class="apresentacao__desenvolvimento">Somos alunos do Colégio Estadual do Paraná e fomos orientados a
-                desenvolver um site na discplina de programação onde contivesse um apanhado geral das pesquisas e
-                empreendimentos dos componentes curriculares do Novo Ensino Médio.</p>
+                desenvolver um site na discplina de programação onde tivesse mostrando inovações a qual a cidade foi responsavel por ajudar o campo</p>
         </section>
         <section class="contato">
             <h3 class="contato__titulo">
