--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h3 class="contato__titulo">
                 Contate-nos através deste e-mail:
             </h3>
-            <p class="contate__email">registros_equipe05@gmail.com</p>
+            <p class="contate__email">registros_agrinho@gmail.com</p>
         </section>
     </main>
     <footer>
