--- a/sobrenos.html
+++ b/sobrenos.html
@@ -33,33 +33,16 @@
                 Quem somos nós?
             </h1>
             <p class="apresentacao__desenvolvimento">
-                Somos alunos do Colégio Estadual do Paraná, criadores do site e reponsáveis pela manutenção deste.
-                Cursamos, atualmente, o 2° ano do Novo Ensino Médio e temos a finalidade de divulgar e dispor
-                exercícios, conteúdos, projetos e trabalhos escolares, bem como oferecer, até
-                onde podemos, suporte educacional aos estudantes do EM.
+                Sou o cirador deste site que visa nos mostrar como a cidade pode ser 
+                ser bastante util para a vida do campo, mostrando que assim há lados bons na cidade 
+                e nao soamente coisas ruins como pessoas tentam nos mostrar ser
             </p>
         </section>
         <section>
             <div class="main__nos__fotos">
                 <div class="main__fotos">
-                    <img src="/imagens/gabryel.jpg" alt="Gabryel" class="main__img">
-                    <p class="main__fotos__text">Gabryel</p>
-                </div>
-                <div class="main__fotos">
                     <img src="/imagens/lian.jpg" alt="Lian" class="main__img">
                     <p class="main__fotos__text">Lian</p>
-                </div>
-                <div class="main__fotos">
-                    <img src="/imagens/lohane.jpg" alt="Lohane" class="main__img">
-                    <p class="main__fotos__text">Lohane</p>
-                </div>
-                <div class="main__fotos">
-                    <img src="/imagens/loyola.jpg" alt="Loyola" class="main__img">
-                    <p class="main__fotos__text">Matheus Loyola</p>
-                </div>
-                <div class="main__fotos">
-                    <img src="/imagens/mel.jpg" alt="Melissa" class="main__img">
-                    <p class="main__fotos__text">Melyssa</p>
                 </div>
             </div>
         </section>
