--- a/disciplinas.html
+++ b/disciplinas.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/disciplinas.css">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
-    <title>2º site</title>
+    <title>projeto agrinho</title>
 </head>
 
 <body>
     <header>
-        <h1 class="header__titulo">EQUIPE/05</h1>
+        <h1 class="header__titulo">Projeto Agrinho</h1>
         <div id="header__busca">
             <input id="header__barra" type="text" placeholder="Buscar..." />
             <a href="#" id="header__barra">
@@ -28,10 +28,10 @@
     </header>
     <main>
         <section class="disciplinas">
-            <a href="/disciplinas/programacao.html" class="disciplinas__itens">Programação</a>
+            <a href="/disciplinas/programacao.html" class="disciplinas__itens">Tecnologia</a>
             <a href="/disciplinas/robotica.html" class="disciplinas__itens">Robótica</a>
-            <a href="/disciplinas/biotecnologia.html" class="disciplinas__itens">Biotecnologia</a>
-            <a href="/disciplinas/empreendedorismo.html" class="disciplinas__itens">Empreendedorismo</a>
+            <a href="/disciplinas/biotecnologia.html" class="disciplinas__itens">Maquinario</a>
+            <a href="/disciplinas/empreendedorismo.html" class="disciplinas__itens">Refigeração</a>
         </section>
     </main>
     <footer>
