--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/folhas de estilo/index.css">
     <link rel="stylesheet" href="/folhas de estilo/programacao.css">
     <link rel="shortcut icon" href="/imagens/numero-5.png" type="image/x-icon">
-    <title>2º site</title>
+    <title>Projeto Agrinho</title>
 </head>
 
 <body>
     <header>
-        <h1 class="header__titulo">EQUIPE/05</h1>
+        <h1 class="header__titulo">Projeto Agrinho</h1>
         <div id="header__busca">
             <input id="header__barra" type="text" placeholder="Buscar..." />
             <a href="#" id="header__barra">
@@ -21,7 +21,7 @@
         </div>
         <nav class="header__ul">
             <a class="header__link" href="/index.html">Home</a>
-            <a class="header__link" href="/disciplinas.html">Disciplinas</a>
+            <a class="header__link" href="/disciplinas.html">Objetivos</a>
             <a class="header__link" href="/sobrenos.html">Sobre nós</a>
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
