--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,11 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
-    <h1>como a tecnologia ajuda no agronegocio</h1>
+    <main class="campo">
+        <section class="teclado">
+            <h1>como a tecnologia ajuda no agronegocio</h1>
+        </section>
+    </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
     </footer>
