--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -28,7 +28,7 @@
     </header>
     <main class="campo">
         <section class="teclado">
-            <h5>como a tecnologia ajuda no agronegocio</h5>
+            <h5>como a tecnologia ajuda no agronegócio</h5>
         </section>
     </main>
     <footer>
