--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -28,7 +28,14 @@
     </header>
     <main class="campo">
         <section class="teclado">
-            <h5>como a tecnologia ajuda no agronegócio</h5>
+            <h5>COMO A TECNOLÓGIA AJUDA NO AGRONEGÓCIO</h5>
+            <p>
+                A tecnologia tem desempenhado um papel crucial na 
+                transformação do agronegócio, aumentando a eficiência, a 
+                produtividade e a sustentabilidade das operações agrícolas. Aqui 
+                estão algumas das principais tecnologias que estão sendo 
+                implementadas no setor:
+            </p>
         </section>
     </main>
     <footer>
